--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
-    "require": {
-        "swiftmailer/swiftmailer": "^6.0"
+    "require":{
+        "swiftmailer/swiftmailer" :"^6.0",
+        "firebase/php-jwt": "^5.4",
+        "symfony/mailer": "^5.3"
     }
 }
