FEAT :: installed express-useragent from https://github.com/biggora/express-useragent for handling analytics

--- a/bin/package.json
+++ b/bin/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-useragent": "^1.0.15",
     "express-validator": "^6.13.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
