--- a/bin/package.json
+++ b/bin/package.json
@@ -1,42 +1,18 @@
 {
-  "name": "oldshelf-api",
-  "version": "1.0.0",
-  "description": "An extension of nethbooks -- a student companion web app to serve content and study resources to students",
-  "main": "index.js",
+  "name": "profile-api",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./bin/www",
+    "dev": "nodemon index.js",
+    "deploy": "git push heroku master"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/opeolluwa/portfolio"
-  },
-  "keywords": [
-    "MEVN"
-  ],
-  "author": "Adeoye Adefemi Opeoluwa",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/opeolluwa/portfolio/issues"
-  },
-  "homepage": "https://github.com/opeolluwa/portfolio#readme",
   "dependencies": {
-    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
-    "email-validator": "^2.0.4",
-    "express": "^4.17.1",
-    "express-useragent": "^1.0.15",
-    "express-validator": "^6.13.0",
-    "jsonwebtoken": "^8.5.1",
-    "lodash": "^4.17.21",
-    "mysql2": "^2.3.2",
-    "nodejs-email-validation": "^1.1.1",
-    "nodemailer": "^6.7.0",
-    "uuid": "^8.3.2",
-    "valid-url": "^1.0.9"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "express": "~4.16.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.13.0",
+    "sequelize-bcrypt": "^1.1.0"
   }
 }
