--- a/config/config.json
+++ b/config/config.json
@@ -1,13 +1,9 @@
-
-//load in dependencies
-require("dotenv").config()
-
-module.exports = {
+{
   "development": {
-    "username": process.env.DB_USER,
-    "password": process.env.DB_PASS,
-    "database": process.env.DB_SCHEMA,
-    "host": process.env.DB_HOST,
+    "username": "sillicone",
+    "password": "",
+    "database": "restify",
+    "host": "localhost",
     "dialect": "mysql"
   },
   "test": {
