--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Adeoye", "firstname", "lastname"]
+  "cSpell.words": ["Adeoye", "firstname", "lastname"],
+  "files.exclude": {
+    "*/node_modules": true,
+    "**/.env": true,
+    "**/node_modules": true,
+    "docs/node_modules": true,
+    "**/.crash": true
+  }
 }
