CHORE :: installed nodemailer, otpgenerator anl lodash

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "express": "~4.16.1",
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.7.2",
+    "otp-generator": "^4.0.0",
     "sequelize": "^6.13.0",
     "sequelize-bcrypt": "^1.1.0"
   },
