--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "email-templates": "^8.0.8",
     "express": "~4.16.1",
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^8.5.1",
@@ -17,6 +18,7 @@
     "mysql2": "^2.3.3",
     "nodemailer": "^6.7.2",
     "otp-generator": "^4.0.0",
+    "pug": "^3.0.2",
     "sequelize": "^6.13.0",
     "sequelize-bcrypt": "^1.1.0"
   },
